# tui_rss

./: Cargo.toml  README.md
data/: db.json
src/: lib.rs  main.rs
src/application/: actions.rs  mod.rs  state.rs  ui.rs
src/input/: events.rs  keys.rs  mod.rs
