[package]
name = "tui_rss"
version = "0.1.0"
edition = "2018"

[dependencies]

crossterm = { version = "0.20", features = [ "serde" ] }
eyre = "0.6"
reqwest = { version = "0.11", features = ["blocking","json"] }
rss = "2.0"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
tui = { version = "0.16", default-features = false, features = ['crossterm', 'serde'] }
webbrowser = "0.5.5"